Fixing avrora failure with benchmark.sh and processing per run in garbage.py